# grades

./: .coveragerc  .gitignore  LICENCE  README.md  justfile  pyproject.toml  requirements.txt
documentation/models/user/: README.md
documentation/models/user/Models/: Case.md  ColumnsConfig.md
documentation/user/: README.md
documentation/user/Models/: Case.md  ColumnsConfig.md  Grade.md  PLOTORIENTATION.md  TableConfig.md
examples/: README.md  example.py  example_open_source.py  mock.py
examples/data/: example-data.csv
src/grades_RAJ_OPEN/: __init__.py  run.py
src/grades_RAJ_OPEN/steps/: format_data.py  read_data.py
src/r_open_grades/: __init__.py  methods.py
src/r_open_grades/models/: user-schema.yaml
src/r_open_grades/steps/: __init__.py  format_data.py  output_plot.py  output_stats.py  read_data.py
